# wiggum

./: .gitignore  .markdownlint.json  .markdownlintignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  architecture.html  build.rs  cli-reference.html  contributing.html  deny.toml  generated-artifacts.html  getting-started.html  index.html  installation.html  language-profiles.html  mcp-server.html  plan-definition.html  plan-phases.html  plan-preflight.html  plan-project.html  print.html  quick-start.html  ralph-wiggum-loop.html  searcher-c2a407aa.js  searchindex-84d30707.js  toc-1dd52a83.js  toc.html
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/rust-setup/: action.yml
.github/workflows/: auto-tag.yml  ci.yml  codeql.yml  dependabot-automerge.yml  docs.yml  fuzz.yml  release.yml  scorecard.yml  security.yml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: plan_parser.rs  template_render.rs
project-docs/: .gitignore  book.toml
project-docs/docs_source/: SUMMARY.md  architecture.md  cli-reference.md  contributing.md  generated-artifacts.md  getting-started.md  installation.md  introduction.md  language-profiles.md  mcp-server.md  plan-definition.md  plan-phases.md  plan-preflight.md  plan-project.md  quick-start.md  ralph-wiggum-loop.md  security.md  strict-standards.md  targets.md  workspace.md
project-docs/wiggum-3.0/: .gitignore  plan.toml
reference/: example-plan.toml  example-progress.md  example-refactor-plan.toml  orchestrator.prompt.md.example
reference/example-tasks/: T01-api-spike.md  T02-workspace-scaffold.md  T03-domain-model.md  T04-token-store.md  T05-auth-adapter.md  T06-teams-http-client.md  T07-app-state.md  T08-terminal.md  T09-screens.md  T10-services.md  T11-message-sending.md  T12-trouter.md  T13-polish.md
reference/example-workspace/: pulsar-core.toml  pulsar-server.toml  workspace.toml
scripts/: commit-msg  install-hooks.sh  pre-commit  pre-push
src/: error.rs  lib.rs  main.rs  ports.rs
src/adapters/: add_task.rs  bootstrap.rs  cli.rs  diff.rs  fs.rs  init.rs  mcp.rs  mod.rs  patterns.rs  replan.rs  resume.rs  retro.rs  split.rs  templates.rs  vcs.rs  watch.rs
src/adapters/mcp/: protocol.rs
src/domain/: check.rs  dag.rs  lint.rs  mod.rs  plan.rs  pricing.rs  report.rs  targets.rs  workspace.rs
src/domain/languages/: csharp.rs  elixir.rs  go.rs  java.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  swift.rs  typescript.rs
src/generation/: agent_rules.rs  agents_md.rs  background_auditor.rs  claude.rs  clean.rs  evaluator.rs  features.rs  hooks.rs  mod.rs  orchestrator.rs  plan_doc.rs  planner.rs  progress.rs  task.rs  templates.rs  tokens.rs
tests/: integration_test.rs  version_cli_test.rs
tests/fixtures/: example-plan.toml
