[package]
name = "wiggum"
version = "0.1.0"
edition = "2024"
description = "AI orchestration scaffold generator for the Ralph Wiggum loop"
license = "MIT OR Apache-2.0"
repository = "https://github.com/greysquirr3l/wiggum"
readme = "README.md"
keywords = ["ai", "orchestration", "scaffold", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[lints.clippy]
# Lint groups
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

# Transitive dependency version mismatches (can't fix)
multiple_crate_versions = "allow"

# Security-focused lints (deny level)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
cast_ptr_alignment = "deny"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Interactive prompts
dialoguer = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
toml_edit = "0.25"

# Template rendering
tera = "1"

# DAG validation
petgraph = "0.8"

# Async runtime (MCP server)
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
