[package]
name = "wiggum-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
wiggum = { path = ".." }

[[bin]]
name = "plan_parser"
path = "fuzz_targets/plan_parser.rs"

[[bin]]
name = "template_render"
path = "fuzz_targets/template_render.rs"
